@@ -29,6 +29,7 @@ or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
   - Updated backend module code to support valias
   - Added initial FHS compliance
   - Removed authvchkpw because we do not support Courier-MTA any longer
+  - Added vmoduserflags binary
 
   Luis Felipe Silveira da Silva <felipe@bsd.com.br>
   - Updated to provide maildrop flag in vlimits MySQL
